syntax = "proto3";

package com.road.yishi.proto.campaign;

message CampaignFogDataReqMsg {
  int32 index = 1;
  int32 fogByte = 2;
}
