syntax = "proto3";

package com.road.yishi.proto.room;

message RoomExitMsg {
  string msg = 1;
}
